--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
 
     {% block extra-style %}{% endblock %}
 </head>
+
 <style>
 .search_window {
 	display: inline-block;
@@ -41,7 +42,8 @@
 	background: #32AAFF;
 }
 </style>
-
+{% block aaaa %}
+{% endblock %}
 <a href="{% url 'gachon_flea:index' %}">
     <img src="/static/img/gachon.jpg" alt="gachon">
 </a>
