--- a/gachon_flea/templates/gachon_flea/mypage/mypage_check_review.html
+++ b/gachon_flea/templates/gachon_flea/mypage/mypage_check_review.html
@@ -1,12 +1,12 @@
-<html lang="kor" xmlns:ng="http://angularjs.org" id="ng-app" ng-app="DiagApp">
-    <head>
-        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.css" rel="stylesheet"/>
-        <link href="ng-table.min.css" rel="stylesheet"/>
-        <link rel="stylesheet" href="style.css">
-      </head>
-    <meta charset="utf-8">
-    <title>Table 정렬</title>
-    <style>
+{%extends "base.html"%}
+
+{% load static %}
+
+{%block title%}main.html{%endblock%}
+
+{%block content%}
+
+<style>
         .form-side{/*폼을 왼쪽정렬시킴*/
             float:left;
         }
@@ -46,12 +46,9 @@
         margin: auto;
         border: 1px solid #bcbcbc;
       }
-    </style>
-  </head>
-  <body>
-      <form class="form-side">
-              <a href="{% url 'gachon_flea:etc' %}" class="btn btn-outline-dark" id="side-bar">기타</a>&emsp;
+</style>
 
+    <form class="form-side">
               <div id="side"><input type="button" id="side-bar" value="지갑 보기" onclick="{% url 'gachon_flea:etc' %}"></div>
               <div id="side"><input type="button" id="side-bar" value="진행중인 구매" onclick="{% url 'gachon_flea:buy_ing' %}"></div>
               <div id="side"><input type="button" id="side-bar" value="진행중인 판매" onclick="{% url 'gachon_flea:sell_ing' %}"></div>
@@ -59,7 +56,10 @@
               <div id="side"><input type="button" id="side-bar" value="구매 내역" onclick="{% url 'gachon_flea:buy' %}"></div>
               <div id="side"><input type="button" id="side-bar" value="판매 내역" onclick="{% url 'gachon_flea:sell' %}"></div>
               <div id="side"><input type="button" id="side-bar" value="후기 확인" onclick="{% url 'gachon_flea:check_review' %}"></div>
-      </form>
+    </form>
+
+    <h1>{{user}}님의 후기목록</h1><br>
+
     <table border="0">
       <thead>
         <tr>
@@ -68,18 +68,35 @@
         </tr>
       </thead>
       <tbody>
-      <tr>
-          <th>
-              후기 목록입니다.
-          </th>
-      </tr>
-        {% for cart in object_list %}
+          <tr>
+              <th>
+                  후기 목록입니다.
+              </th>
+          </tr>
+          <tr>
+              <th>상품명</th>
+              <th>판매자</th>
+              <th><img src="{% static 'img/like.png' %}" width="30" height="30"></th>
+              <th>후기글</th>
+              <th>수정</th>
+              <th>삭제</th>
+          </tr>
 
-                <tr>
-                    <th><li>{{ cart.product_id.name }}</li></th>
-                </tr>
-        {%endfor%}
+          {% for item in object_list %}
+          <tr>
+              <td>{{ item.product_id }}</td>
+              <td>{{ item.product_id.owner }}</td>
+              {% if item.evaluation == True %}
+              <td>좋아요</td>
+              {% else %}
+              <td>싫어요</td>
+              {% endif %}
+              <td>{{ item.content }}</td>
+              <td><a href="{% url 'gachon_flea:modify_review' item.id %}">수정</a></td>
+              <td><a href="{% url 'gachon_flea:delete_review' item.id %}">삭제</a></td>
+          </tr>
+          {%endfor%}
       </tbody>
     </table>
-  </body>
-</html>
+
+{%endblock%}
