[1216]판매자 정보 확인

--- a/gachon_flea/templates/gachon_flea/Product_detail.html
+++ b/gachon_flea/templates/gachon_flea/Product_detail.html
@@ -54,7 +54,7 @@
 
     <div>
         <h3>판매자 정보</h3>
-        <img src="like.png">{{obeject.owner.profile.good }}  <img src="dislike.png"> {{ obeject.owner.profile.bad }}
+        <img src="/static/img/like.png">{{ product.owner.profile.good }}  <img src="/static/img/dislike.png"> {{ product.owner.profile.bad }}
     </div>
 
  <br>
