--- a/gachon_flea/templates/gachon_flea/after_mypage/confirm_buy.html
+++ b/gachon_flea/templates/gachon_flea/after_mypage/confirm_buy.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{%extends "base.html"%}
 
-</body>
-</html>
+{% load static %}
+{%block title%}마이페이지{%endblock%}
+{% block content %}
+
+
+
+      <h1>  결제되었습니다. </h1>
+     <h1>   <a href="{% url gachon_flea:index %}">메인으로 돌아가기</a></h1>
+
+
+
+
+
+
+
+{% endblock %}
