[1216] 카테고리 사진 안 보이는 오류 수정

--- a/gachon_flea/templates/gachon_flea/main.html
+++ b/gachon_flea/templates/gachon_flea/main.html
@@ -56,7 +56,7 @@
                 <div class="col-md-3">
                     <div href="#" class="card card-product-grid">
                         <div class="thumbnail">
-                            <a href="{{ item.get_absolute_url }}">aaa
+                            <a href="{{ item.get_absolute_url }}">
                                 <img src="{{ item.img.thumb_url }}" style="width: 100%;">
                             </a>
                         </div>
