--- a/gachon_flea/templates/gachon_flea/main/beauty.html
+++ b/gachon_flea/templates/gachon_flea/main/beauty.html
@@ -15,14 +15,12 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="static/img/gachon.jpg" class="d-block w-100" alt="...">
+      <img src="/static/img/메인화면.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="static/img/gachon.jpg" class="d-block w-100" alt="...">
+      <img src="/static/img/안내화면.png" class="d-block w-100" alt="...">
     </div>
-    <div class="carousel-item">
-      <img src="static/img/gachon.jpg" class="d-block w-100" alt="...">
-    </div>
+    
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
