--- a/gachon_flea/templates/gachon_flea/Mypage.html
+++ b/gachon_flea/templates/gachon_flea/Mypage.html
@@ -59,7 +59,7 @@
           <a href="{% url 'gachon_flea:sell_ing' %}">
               <div id="side"><input type="button" id="side-bar" value="진행중인 판매"></div>
           </a>
-          <a href="{% url 'gachon_flea:got' %}">
+          <a href="{% url 'cart:cart_detail' %}">
                <div id="side"><input type="button" id="side-bar" value="찜 목록"></div>
           </a>
           <a href="{% url 'gachon_flea:buy' %}">
