--- a/gachon_flea/templates/gachon_flea/mypage/mypage_buy.html
+++ b/gachon_flea/templates/gachon_flea/mypage/mypage_buy.html
@@ -55,7 +55,7 @@
               <div id="side"><input type="button" id="side-bar" value="지갑 보기" onclick="{% url 'gachon_flea:etc' %}"></div>
               <div id="side"><input type="button" id="side-bar" value="진행중인 구매" onclick="{% url 'gachon_flea:buy_ing' %}"></div>
               <div id="side"><input type="button" id="side-bar" value="진행중인 판매" onclick="{% url 'gachon_flea:sell_ing' %}"></div>
-              <div id="side"><input type="button" id="side-bar" value="찜 목록" onclick="{% url 'gachon_flea:got' %}"></div>
+              <div id="side"><input type="button" id="side-bar" value="찜 목록" onclick="{% url 'cart:cart_detail' %}"></div>
               <div id="side"><input type="button" id="side-bar" value="구매 내역" onclick="{% url 'gachon_flea:buy' %}"></div>
               <div id="side"><input type="button" id="side-bar" value="판매 내역" onclick="{% url 'gachon_flea:sell' %}"></div>
               <div id="side"><input type="button" id="side-bar" value="후기 확인" onclick="{% url 'gachon_flea:check_review' %}"></div>
@@ -73,12 +73,14 @@
               구매 내역입니다.
           </th>
       </tr>
+      {% if object.before == 'True' %}
         {% for cart in object_list %}
 
                 <tr>
                     <th><li>{{ cart.product_id.name }}</li></th>
                 </tr>
         {%endfor%}
+      {% endif %}
       </tbody>
     </table>
   </body>
