--- a/gachon_flea/templates/gachon_flea/mypage/mypage_sell_ing.html
+++ b/gachon_flea/templates/gachon_flea/mypage/mypage_sell_ing.html
@@ -55,7 +55,7 @@
               <div id="side"><input type="button" id="side-bar" value="지갑 보기" redirect="{% url 'gachon_flea:etc' %}"></div>
               <div id="side"><input type="button" id="side-bar" value="진행중인 구매" redirect="{% url 'gachon_flea:buy_ing' %}"></div>
               <div id="side"><input type="button" id="side-bar" value="진행중인 판매" redirect="{% url 'gachon_flea:sell_ing' %}"></div>
-              <div id="side"><input type="button" id="side-bar" value="찜 목록" redirect="{% url 'gachon_flea:got' %}"></div>
+              <div id="side"><input type="button" id="side-bar" value="찜 목록" redirect="{% url 'cart:cart_detail' %}"></div>
               <div id="side"><input type="button" id="side-bar" value="구매 내역" redirect="{% url 'gachon_flea:buy' %}"></div>
               <div id="side"><input type="button" id="side-bar" value="판매 내역" redirect="{% url 'gachon_flea:sell' %}"></div>
               <div id="side"><input type="button" id="side-bar" value="후기 확인" redirect="{% url 'gachon_flea:check_review' %}"></div>
@@ -70,31 +70,14 @@
       <tbody>
       <tr>
           <th>
-              판매 중인 품목입니다.
+              진행중인 판매 목록입니다.
           </th>
       </tr>
-        {% for product in object_list %}
-      {% if product.sell == False %}
-      <tr>
-      <th>
-            {{ product.name }}
-          </th>
-      </tr>
-      {% endif %}
-        {%endfor%}
-      <tr>
-          <th>
-              판매 완료된 품목입니다.
-          </th>
-      </tr>
-        {% for product in object_list %}
-      {% if product.sell == True %}
-      <tr>
-      <th>
-            {{ product.name }}
-          </th>
-      </tr>
-      {% endif %}
+        {% for cart in object_list %}
+
+                <tr>
+                    <th><li>{{ cart.product_id.name }}</li></th>
+                </tr>
         {%endfor%}
       </tbody>
     </table>
