--- a/gachon_flea/templates/gachon_flea/login.html
+++ b/gachon_flea/templates/gachon_flea/login.html
@@ -194,14 +194,7 @@
 					<br>
 					<br>
 
-					<a href="signup.html" >회원가입</a>
-
-
-
-				</div>
-				<div class="links">
-					<a href="pass.html" >비밀번호 찾기</a>
-
+					<a href="{% url 'gachon_flea:signup' %}" >회원가입</a>
 				</div>
 
 
