--- a/gachon_flea/templates/gachon_flea/mypage/mypage_check_review.html
+++ b/gachon_flea/templates/gachon_flea/mypage/mypage_check_review.html
@@ -49,14 +49,24 @@
 </style>
 
     <form class="form-side">
-              <div id="side"><input type="button" id="side-bar" value="지갑 보기" onclick="{% url 'gachon_flea:etc' %}"></div>
-              <div id="side"><input type="button" id="side-bar" value="진행중인 구매" onclick="{% url 'gachon_flea:buy_ing' %}"></div>
-              <div id="side"><input type="button" id="side-bar" value="진행중인 판매" onclick="{% url 'gachon_flea:sell_ing' %}"></div>
-              <div id="side"><input type="button" id="side-bar" value="찜 목록" onclick="{% url 'cart:cart_detail' %}"></div>
-              <div id="side"><input type="button" id="side-bar" value="구매 내역" onclick="{% url 'gachon_flea:buy' %}"></div>
-              <div id="side"><input type="button" id="side-bar" value="판매 내역" onclick="{% url 'gachon_flea:sell' %}"></div>
-              <div id="side"><input type="button" id="side-bar" value="후기 확인" onclick="{% url 'gachon_flea:check_review' %}"></div>
-    </form>
+          <a href="{% url 'gachon_flea:wallet' %}">
+              <div id="side"><input type="button" id="side-bar" value="지갑 보기"></div>
+          </a>
+          <a href="{% url 'gachon_flea:buy_ing' %}">
+              <div id="side"><input type="button" id="side-bar" value="진행중인 구매"></div>
+          </a>
+          <a href="{% url 'gachon_flea:sell_ing' %}">
+              <div id="side"><input type="button" id="side-bar" value="진행중인 판매"></div>
+          </a>
+          <a href="{% url 'gachon_flea:got' %}">
+               <div id="side"><input type="button" id="side-bar" value="찜 목록"></div>
+          </a>
+          <a href="{% url 'gachon_flea:check_review' %}">
+              <div id="side"><input type="button" id="side-bar" value="후기 확인"></div>
+          </a>
+
+
+      </form>
 
     <h1>{{user}}님의 후기목록</h1><br>
 
@@ -64,7 +74,7 @@
       <thead>
         <tr>
             <th scope="row", rowspan="2">가천월렛(지갑아이콘 넣고)<br/><!-- 지갑보기 -->
-                잔액 : 999999원(data)</th>
+                잔액 : {{ balance }} 원 입니다.</th>
         </tr>
       </thead>
       <tbody>
