--- a/gachon_flea/templates/gachon_flea/main/food.html
+++ b/gachon_flea/templates/gachon_flea/main/food.html
@@ -62,7 +62,7 @@
                         </div>
                         <figcaption class="info-wrap">
                             <a href="{{ item.get_absolute_url }}" class="title">{{ item.name }}</a> <!--상품명-->
-                            <div class="price mt-1">{{ item.price }}</div> <!-- 가격 -->
+                            <div class="price mt-1">{{ item.price }}원</div> <!-- 가격 -->
                         </figcaption>
                     </div>
                 </div> <!-- col.// -->
