--- a/templates/base.html
+++ b/templates/base.html
@@ -13,110 +13,164 @@
 </head>
 
 <style>
+
+*:focus { outline:none; }
 .search_window {
-    top:15%;
-    left: 40%;
-	display: inline-block;
-	width: 800px; height: 65px;
-	border: 2px solid #32AAFF;
-	background: white;
-}
-.input_text {
-    top:15%;
-    border:0px;
-	width: 390px; height: 100%;
-	line-height: 20px;
-	font-weight: bold;
-	font-size: 30px;
-	outline: none;
+   width: 500px; height: 50px;
+   border: 2px solid #32AAFF;
+    transform: translate(100%, -200%);  /*좌우 위치, 상하 위치 조절코드*/
+   background: white;
+    font-size: 30px;
+   font-weight: bold;
+   border-radius: 1px;
 }
 .searchbtn {
     margin-left:-3px;
-	width: 80px; height: 100%;
-    margin: 0 auto; border: 0;
-	vertical-align: top;
-	background: #32AAFF;
-	color: white;
+   width: 80px; height: 50px;
+    border: 0;
+    transform: translate(630%, -201%);  /*좌우 위치, 상하 위치 조절코드*/
+   background: #32AAFF;
+   color: white;
     font-size: 30px;
-	font-weight: bold;
-	border-radius: 1px;
-	cursor: pointer;
+   font-weight: bold;
+   border-radius: 1px;
+   cursor: pointer;
+}
+.loginbtn {
+    margin-left:-3px;
+   width: 150px; height: 50px;
+    border: 0;
+    transform: translate(620%, -201%);  /*좌우 위치, 상하 위치 조절코드*/
+   background: #32AAFF;
+   color: white;
+    font-size: 30px;
+   font-weight: bold;
+   border-radius: 1px;
+   cursor: pointer;
+}
+.logoutbtn {
+    margin-left:-3px;
+   width: 150px; height: 50px;
+    border: 0;                 /*로그아웃 로그인 크기 고려하여 transform 조절*/
+    transform: translate(270%, -201%);  /*좌우 위치, 상하 위치 조절코드*/
+   background: #32AAFF;
+   color: red;
+    font-size: 30px;
+   font-weight: bold;
+   border-radius: 1px;
+   cursor: pointer;
+}
+.registerbtn {
+    margin-left:-3px;
+   width: 150px; height: 50px;
+    border: 0;                 /*로그아웃 로그인 크기 고려하여 transform 조절*/
+    transform: translate(670%, -201%);  /*좌우 위치, 상하 위치 조절코드*/
+   background: #32AAFF;
+   color: white;
+    font-size: 30px;
+   font-weight: bold;
+   border-radius: 1px;
+   cursor: pointer;
+}
+.mypagebtn {
+    margin-left:-3px;
+   width: 180px; height: 50px;
+    border: 0;                 /*로그아웃 로그인 크기 고려하여 transform 조절*/
+    transform: translate(240%, -201%);  /*좌우 위치, 상하 위치 조절코드*/
+   background: #32AAFF;
+   color: white;
+    font-size: 30px;
+   font-weight: bold;
+   border-radius: 1px;
+   cursor: pointer;
 }
 .addbtn {
     margin-left:-3px;
-	width: 143px; height: 100%;
-    margin: 0 auto; border: 0;
-	vertical-align: top;
-	background: #32AAFF;
-	color: white;
+   width: 150px; height: 50px;
+    border: 0;                 /*로그아웃 로그인 크기 고려하여 transform 조절*/
+    transform: translate(320%, -201%);  /*좌우 위치, 상하 위치 조절코드*/
+   background: #32AAFF;
+   color: white;
     font-size: 30px;
-	font-weight: bold;
-	border-radius: 1px;
-	cursor: pointer;
+   font-weight: bold;
+   border-radius: 1px;
+   cursor: pointer;
 }
-.mypagebtn {
-    float:right;
-	width: 170px; height: 100%;
-    margin: 0 auto; border: 0;
-	vertical-align: top;
-	background: #32AAFF;
-	color: white;
+.nonmemberbtn {
+    margin-left:-3px;
+   width: 150px; height: 50px;
+    border: 0;
+    transform: translate(630%, -201%);  /*좌우 위치, 상하 위치 조절코드*/
+   background: #32AAFF;
+   color: white;
     font-size: 30px;
-	font-weight: bold;
-	border-radius: 1px;
-	cursor: pointer;
+   font-weight: bold;
+   border-radius: 1px;
+   cursor: pointer;
 }
-
+.memberbtn {
+    margin-left:-3px;
+   width: 150px; height: 50px;
+    border: 0;
+    transform: translate(770%, -201%);
+   background: #32AAFF;
+   color: white;
+    font-size: 30px;
+   font-weight: bold;
+   border-radius: 1px;
+   cursor: pointer;
+}
 .searchbtn:hover {
-	background: gray;
+   background: gray;
+}
+.logoutbtn:hover {
+   background: gray;
+}
+.loginbtn:hover {
+   background: gray;
 }
 .addbtn:hover {
-	background: gray;
+   background: gray;
+}
+.nonmemberbtn:hover {
+   background: gray;
+}
+.memberbtn:hover {
+   background: gray;
 }
 .mypagebtn:hover {
-	background: gray;
+   background: gray;
 }
-.searchdiv{ 
-    border:0;
-    display:inline-block;
-    width:100%;
-    height:60px;
+.registerbtn:hover {
+   background: gray;
 }
 
+a { color: white; }
+
+a:hover {text-decoration: none;
+color:white; }
 </style>
 {% block aaaa %}
 {% endblock %}
 <a href="{% url 'gachon_flea:index' %}">
     <img src="/static/img/gachon.jpg" alt="gachon">
 </a>
-<!--검색창--> 
-<form class='search_window' action="/gachon/search/" method="post"> {% csrf_token %}
-    <div class="searchdiv"><input class='input_text' type="search" placeholder="검색어 입력" name="search_word">
+<!--검색창-->
+<a action="/gachon/search/" method="post"> {% csrf_token %}
+        <input class='search_window' type="search" placeholder="검색어 입력" name="search_word">
         <button type='submit' class='searchbtn'>검색</button>
-       <button type='submit' class='mypagebtn'>마이페이지</button>
-        <button type='submit' class='addbtn'>상품등록</button>
-    </div> 
+        {% if user.is_active %}
+        <button type="button" class="memberbtn">{% firstof user.get_short_name user.get_username %}</button></a>
+        <a href="{% url 'gachon_flea:logout' %}" style="color:#fff;"><button type="button"  class="logoutbtn" > 로그아웃</button></a>
+         <a href="{% url 'gachon_flea:mypage' %}"  style="color:#fff;"><button type="button" class="mypagebtn">마이페이지</button></a>
+        <a href="{% url 'gachon_flea:add' %}" style="color:#fff;"><button type="button" class="addbtn">    상품등록</button></a>
+        {%else%}
+        <!--<button type='submit' class='nonmemberbtn'>비회원</button>-->
+        <a href="{% url 'gachon_flea:login' %}" ><button type="button" class="loginbtn"> 로그인</button></a>
+         <a href="{% url 'gachon_flea:signup' %}"><button type="button" class="registerbtn">회원가입</button></a>
+        {% endif %}
+
 </form>
-
-
-            <li class = "nav-item dropdown mx-1 btn btn-primary" style= float:right;>
-                {% if user.is_active %}
-                <a class = "nav-link dropdown-toggle text-white" href="#" data-toggle = "dropdown">
-                    <i class = "fas fa-user"></i>&ensp;{% firstof user.get_short_name user.get_username %}&ensp;</a>
-                <div class = "dropdown-menu">
-                    <a class = "dropdown-item" href="{% url 'gachon_flea:logout' %}">로그아웃</a>
-                    <a class = "dropdown-item" href="{% url 'gachon_flea:mypage' %}">마이페이지</a>
-                    <a class = "dropdown-item" href="{% url 'gachon_flea:add' %}">상품등록</a>
-                </div>
-                {%else%}
-                <a class = "nav-link dropdown-toggle text-white"href="#"data-toggle="dropdown">
-                    <i class="fas fa-user"></i>&ensp;비회원&ensp;</a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item " href="{% url 'gachon_flea:login' %}">로그인</a>
-                    <a class="dropdown-item " href="{% url 'gachon_flea:signup' %}">회원 가입</a>
-                </div>
-                {% endif %}
-            </li>   
 
 <div class="container">
     {% block content %}{% endblock %}
@@ -136,4 +190,3 @@
 
 </body>
 </html>
-
