--- a/gachon_flea/templates/gachon_flea/mypage/mypage_buy_ing.html
+++ b/gachon_flea/templates/gachon_flea/mypage/mypage_buy_ing.html
@@ -69,7 +69,7 @@
     <table border="0">
       <thead>
         <tr>
-            <th scope="row", rowspan="2">가천월렛(지갑아이콘 넣고)<br/><!-- 지갑보기 -->
+            <th scope="row", rowspan="2"><img src="/static/img/wallet.png"><br/><!-- 지갑보기 -->
                 잔액 : {{ balance }}원 입니다.</th>
         </tr>
       </thead>
