--- a/gachon_flea/templates/gachon_flea/mypage/mypage_sell_ing.html
+++ b/gachon_flea/templates/gachon_flea/mypage/mypage_sell_ing.html
@@ -1,11 +1,10 @@
-<html lang="kor" xmlns:ng="http://angularjs.org" id="ng-app" ng-app="DiagApp">
-    <head>
-        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.css" rel="stylesheet"/>
-        <link href="ng-table.min.css" rel="stylesheet"/>
-        <link rel="stylesheet" href="style.css">
-      </head>
-    <meta charset="utf-8">
-    <title>Table 정렬</title>
+{%extends "base.html"%}
+
+{% load static %}
+
+{%block title%}mypage.html{%endblock%}
+
+{%block content%}
     <style>
         .form-side{/*폼을 왼쪽정렬시킴*/
             float:left;
@@ -106,5 +105,4 @@
         {%endfor%}
       </tbody>
     </table>
-  </body>
-</html>
+      {% endblock %}
