--- a/gachon_flea/templates/gachon_flea/Product_detail.html
+++ b/gachon_flea/templates/gachon_flea/Product_detail.html
@@ -48,7 +48,10 @@
             </div>
 
                 <a href="{% url 'gachon_flea:add_cart' product.id %}">
-                 <input type="button" value="add to cart" class="btn btn-primary">
+                 <input type="button" value="찜하기" class="btn btn-primary">
+                </a>
+                <a href="{% url 'gachon_flea:add_cart' product.id %}">
+                    <input type="button" value="구매하기" class="btn btn-primary">
                 </a>
         </div>
   </div>
