--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -47,16 +47,13 @@
 
     <div class="container">
         <div class="row" style="margin-top: 6%">
-        <h2>Your Shopping Cart
+        <h2>
             <span class="badge pull-right">
                 {% with totail_items=cart|length %}
                     {% if cart|length > 0 %}
-                        My Shopping Order:
-                        <a href="{% url 'cart:cart_detail' %}" style="color: #ffffff">
-                            {{ totail_items }} item {{ totail_items|pluralize }}, Kshs. {{ cart.get_total_price }}
-                        </a>
+
                         {% else %}
-                        Your cart is empty.
+                        찜목록이 없습니다.
                     {% endif %}
                 {% endwith %}
             </span>
@@ -64,11 +61,11 @@
             <table class="table table-striped table-hover">
                 <thead style="background-color: #5AC8FA">
                     <tr>
-                        <th>Image</th>
-                        <th>Product</th>
-                        <th>Remove</th>
-                        <th>Unit Price</th>
-                        <th>Price</th>
+                        <th>사진</th>
+                        <th>상품명</th>
+                        <th>삭제</th>
+                        <th>개당 수량</th>
+                        <th>가격</th>
                         <th>구매하기</th>
                     </tr>
                 </thead>
@@ -83,18 +80,18 @@
                             </td>
                             <td>{{ product.name }}</td>
                             <td>
-                                <a href="{% url 'cart:cart_remove' product.id %}">Remove</a>
+                                <a href="{% url 'cart:cart_remove' product.id %}" style="color: #0054FF">삭제하기</a>
                             </td>
-                            <td>kshs. {{ item.price }}</td>
-                            <td>kshs. {{ item.total_price }}</td>
+                            <td>{{ item.price }}원</td>
+                            <td>{{ item.total_price }}원</td>
                             <td><a href="{% url 'gachon_flea:index' %}" class="btn btn-dark">구매하기</a></td>
                         </tr>
                     {% endwith %}
                 {% endfor %}
                 <tr style="background-color: #5AC8FA">
-                    <td><b>Total</b></td>
+                    <td><b>총 금액</b></td>
                     <td colspan="4"></td>
-                    <td colspan="num"><b>kshs. {{ cart.get_total_price }}</b></td>
+                    <td colspan="num"><b>{{ cart.get_total_price }}원</b></td>
                 </tr>
                 </tbody>
             </table>
