--- a/gachon_flea/templates/gachon_flea/Product_detail_add_cart.html
+++ b/gachon_flea/templates/gachon_flea/Product_detail_add_cart.html
@@ -5,11 +5,14 @@
 {%block title%}Product_detail_add_cart.html{%endblock%}
 
 {%block content%}
+<br><br><br>
+<div align="center">
+    <h3>'{{ product.name }}'을(를) 장바구니에 추가하시겠습니까?</h3>
+    <form action="{% url 'cart:cart_add' product.id %}" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ cart_product_form }} <br>
+        <input type="submit" value="찜하기" class="btn btn-primary">
+    </form>
+</div>
 
-<h3>'{{ product.name }}'을 장바구니에 추가하시겠습니까?</h3>
-<form action="{% url 'cart:cart_add' product.id %}" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ cart_product_form }} <br>
-    <input type="submit" value="add to cart" class="btn btn-primary">
-</form>
 {%endblock%}
